# jellytui

./: .example.env  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: app.rs  main.rs  network.rs  storage.rs
